# py_repo_template

./: .coveragerc  .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  example.py  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini  welcome.sh
.github/workflows/: build.yaml  ci.txt  ci.yaml  deploy.yml  example_sh_worfklows.yml
scripts/: welcome.sh
src/: module.py  module1.py
tests/: test_module.py
