[project]
name = "goodstuff"
version = "0.1.0"
description = ""
authors = [
  {name = "A. Random Developer", email = "author@example.com" } # Optional
]
requires-python = ">=3.7"
readme = "README.md"

dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pre-commit",
    "tox",
    "tox-gh-actions",
    "flake8",
    "pytest",
    "coverage"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["goodstuff"]